# stella-typechecker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_tests.sh
grammar/: stellaParser.g4
src/: StellaType.hpp  StellaTypeChecker.hpp  StellaTypeCheckerContext.hpp  main.cpp  stellaLexer.cpp  stellaLexer.h  stellaParser.cpp  stellaParser.h  stellaParserBaseVisitor.cpp  stellaParserBaseVisitor.h  stellaParserVisitor.cpp  stellaParserVisitor.h
src/errors/: CommonError.hpp  ErrorAmbiguousListType.hpp  ErrorAmbiguousPanicType.hpp  ErrorAmbiguousReferenceType.hpp  ErrorAmbiguousSumType.hpp  ErrorAmbiguousThrowType.hpp  ErrorAmbiguousVariantType.hpp  ErrorCode.hpp  ErrorConflictingExceptionDeclarations.hpp  ErrorDuplicateExceptionType.hpp  ErrorDuplicateExceptionVariant.hpp  ErrorDuplicateFuncDecl.hpp  ErrorDuplicateFunctionParameter.hpp  ErrorDuplicateRecordFields.hpp  ErrorDuplicateRecordTypeFields.hpp  ErrorDuplicateVariantTypeFields.hpp  ErrorExceptionTypeNotDeclared.hpp  ErrorIllegalEmptyMatching.hpp  ErrorIllegalLocalExceptionType.hpp  ErrorIllegalLocalOpenVariantException.hpp  ErrorIncorrectArityOfMain.hpp  ErrorIncorrectNumberOfArgs.hpp  ErrorMissingDataForLabel.hpp  ErrorMissingMain.hpp  ErrorMissingRecordFields.hpp  ErrorNonExhaustiveMatchPatterns.hpp  ErrorNotAFunction.hpp  ErrorNotAList.hpp  ErrorNotARecord.hpp  ErrorNotAReference.hpp  ErrorNotATuple.hpp  ErrorTupleIndexOutOfBounds.hpp  ErrorUndefinedVariable.hpp  ErrorUnexpectedDataForNullaryLabel.hpp  ErrorUnexpectedFieldAccess.hpp  ErrorUnexpectedInjection.hpp  (+17 more)
tests/: test1.stella
